OGCAPI-Records : Dynamic properties (#108)
* wip: dynamic properties

# Conflicts:
#	src/shared/ogcapi-records/src/main/java/org/geonetwork/ogcapi/service/cql/ImprovedCqlFilter2Elastic.java
#	src/shared/ogcapi-records/src/main/java/org/geonetwork/ogcapi/service/facets/RecordsFacetsElasticQueryBuilder.java

* wip: dynamic properties part 2

* wip: dynamic properties part 3

* fixed test cases and -Dqa

* WIP: typing system for properties

* test cases

* add dynamic properties to openapi (swagger) document

* autogen facets.json - for the  endpoint

* move all the inner (static class) and enum to their own files

* wip: sortables

* wip: sortables: defaultSortOrder

* test cases for sortby

* wip: refactoring to make the dynamic properties a bit easier

* wip: refactor dynamic properties

* wip: dynamic queryables

* minor changes for demo

* better query for text, change test cases for changes

---------
