# src/modules/ogcapi-records/ogcapi-records-openapi-autogen/src/ogc-openapi-schema/openapi/schemas/catalog.yaml
@@ -63,6 +63,10 @@ allOf:
         type: array
         items:
           $ref: 'linkTemplate.yaml'
+      defaultSortOrder:
+        type: array
+        items:
+          $ref: 'sortOrder.yaml'
       schemes:
         type: array
         description:
